--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
-!/log/.keep
+/log/.keep
 !/tmp/.keep
 
 # Ignore uploaded files in development
@@ -18,10 +18,11 @@
 !/storage/.keep
 
 /node_modules
-/yarn-error.log
+/yarn-error.log/public/assets
 
 /public/assets
 .byebug_history
+.DS_Store
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
