--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "lib": "lib",
     "test": "test"
   },
+  "engines": {
+    "node": "13.7.0",
+    "npm": "6.13.6"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack --watch --mode=development"
